--- a/templates/register.gohtml
+++ b/templates/register.gohtml
@@ -1,27 +1,62 @@
-{{define "register"}}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Login</title>
-    </head>
-    <body>
-    <form action="/register" method="post">
-        {{.}}
-        <label for="username">Username
-            <input type="text" name="username" id="username" required autofocus>
-        </label>
-        <label for="email">Email
-            <input type="email" name="email" id="email" required>
-        </label>
-        <label for="password1">Password
-            <input type="password" name="password1" id="password1" required>
-        </label>
-        <label for="password2">Confirm password
-            <input type="password" name="password2" id="password2" required>
-        </label>
-        <button>Register</button>
-    </form>
-    </body>
-    </html>
+{{define "staticPath"}}../static{{end}}
+
+{{define "title"}}MangaThorg - Register{{end}}
+
+{{define "cssFile"}}forms{{end}}
+
+{{define "page"}}
+
+    <div class="credentials-ctn">
+
+        <div class="around-form before-img">
+            <div class="form-img-ctn">
+                <img src="../static/img/peeking-img-left.png" alt="peeking manga character" class="form-img">
+            </div>
+            <div class="img-filler"></div>
+        </div>
+        <form action="/register" method="post" class="credentials-form">
+            <span class="credentials-title">Register</span>
+            {{.Message}}
+
+            <div class="form-main-ctn">
+                <div class="form-control">
+                    <input id="username" class="form-input" type="text" required autofocus>
+                    <label class="form-label" for="username">
+                        <span class="label-text input-letter-1">U</span><span class="label-text input-letter-2">s</span><span class="label-text input-letter-3">e</span><span class="label-text input-letter-4">r</span><span class="label-text input-letter-5">n</span><span class="label-text input-letter-6">a</span><span class="label-text input-letter-7">m</span><span class="label-text input-letter-8">e</span>
+                    </label>
+                </div>
+                <div class="form-control">
+                    <input id="email" class="form-input" type="text" required>
+                    <label class="form-label" for="email">
+                        <span class="label-text input-letter-1">E</span><span class="label-text input-letter-2">m</span><span class="label-text input-letter-3">a</span><span class="label-text input-letter-4">i</span><span class="label-text input-letter-5">l</span>
+                    </label>
+                </div>
+                <div class="form-control">
+                    <input id="password" class="form-input" type="password" required>
+                    <label class="form-label" for="password">
+                        <span class="label-text input-letter-1">P</span><span class="label-text input-letter-2">a</span><span class="label-text input-letter-3">s</span><span class="label-text input-letter-4">s</span><span class="label-text input-letter-5">w</span><span class="label-text input-letter-6">o</span><span class="label-text input-letter-7">r</span><span class="label-text input-letter-8">d</span>
+                    </label>
+                </div>
+                <div class="form-control">
+                    <input id="confirm-password" class="form-input" type="password" required>
+                    <label class="form-label" for="confirm-password">
+                        <span class="label-text input-letter-1">C</span><span class="label-text input-letter-2">o</span><span class="label-text input-letter-3">n</span><span class="label-text input-letter-4">f</span><span class="label-text input-letter-5">i</span><span class="label-text input-letter-6">r</span><span class="label-text input-letter-7">m</span>
+                    </label>
+                </div>
+            </div>
+
+            <button class="form-btn" type="submit">Register</button>
+            <div class="alternate-msg-ctn">
+                <span class="alternate-msg">Already have an account?</span><a href="/login" class="alternate-link">Sign in</a>
+            </div>
+        </form>
+        <div class="around-form after-img">
+            <div class="img-filler"></div>
+            <div class="form-img-ctn">
+                <img src="../static/img/peeking-right-img.png" alt="peeking manga character" class="form-img">
+            </div>
+        </div>
+    </div>
+
+
 {{end}}
