Tags page and category page. Handled chapter scan request null.

--- a/assets/css/miscellaneous.css
+++ b/assets/css/miscellaneous.css
@@ -207,6 +207,7 @@ body {
   gap: 50px;
   position: relative;
   background-color: #222831;
+  margin-bottom: 150px;
 }
 
 .footer {
@@ -280,6 +281,25 @@ body {
   background-position: 50% 50%;
 }
 
+h2.chapter-scan-manga-title,
+h3.chapter-scan-title {
+  width: 100%;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+h2.chapter-scan-manga-title {
+  font-size: calc(22px + 1.2vw);
+}
+
+h3.chapter-scan-title {
+  font-size: calc(20px + 1vw);
+}
+
 .chapter-scan-list {
   display: flex;
   flex-direction: column;
@@ -290,6 +310,16 @@ body {
   object-fit: contain;
 }
 
+@media screen and (max-width: 1080px) {
+  .chapter-scan-list {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .chapter-scan-list {
+    width: 100%;
+  }
+}
 .tags-title {
   width: 90%;
   height: fit-content;
