--- a/templates/forgot-passwd.gohtml
+++ b/templates/forgot-passwd.gohtml
@@ -20,7 +20,7 @@
 
             <div class="form-main-ctn">
                 <div class="form-control">
-                    <input id="email" class="form-input" type="email" required>
+                    <input name="email" id="email" class="form-input" type="email" required />
                     <label class="form-label" for="email">
                         <span class="label-text input-letter-1">E</span><span class="label-text input-letter-2">m</span><span class="label-text input-letter-3">a</span><span class="label-text input-letter-4">i</span><span class="label-text input-letter-5">l</span>
                     </label>
