--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -20,13 +20,13 @@
 
         <div class="form-main-ctn">
             <div class="form-control">
-                <input id="username" class="form-input" type="text" required autofocus>
+                <input name="username" id="username" class="form-input" type="text" required autofocus />
                 <label class="form-label" for="username">
                     <span class="label-text input-letter-1">U</span><span class="label-text input-letter-2">s</span><span class="label-text input-letter-3">e</span><span class="label-text input-letter-4">r</span><span class="label-text input-letter-5">n</span><span class="label-text input-letter-6">a</span><span class="label-text input-letter-7">m</span><span class="label-text input-letter-8">e</span>
                 </label>
             </div>
             <div class="form-control">
-                <input id="password" class="form-input" type="password" required>
+                <input name="password" id="password" class="form-input" type="password" required />
                 <label class="form-label" for="password">
                     <span class="label-text input-letter-1">P</span><span class="label-text input-letter-2">a</span><span class="label-text input-letter-3">s</span><span class="label-text input-letter-4">s</span><span class="label-text input-letter-5">w</span><span class="label-text input-letter-6">o</span><span class="label-text input-letter-7">r</span><span class="label-text input-letter-8">d</span>
                 </label>
