--- a/templates/update-credentials.gohtml
+++ b/templates/update-credentials.gohtml
@@ -1,6 +1,6 @@
 {{define "staticPath"}}../static{{end}}
 
-{{define "title"}}MangaThorg - Register{{end}}
+{{define "title"}}MangaThorg - New password{{end}}
 
 {{define "cssFile"}}forms{{end}}
 
@@ -14,25 +14,13 @@
             </div>
             <div class="img-filler"></div>
         </div>
-        <form action="/register" method="post" class="credentials-form">
-            <span class="credentials-title">Register</span>
+        <form action="/update-credentials/{{.Id}}" method="post" class="credentials-form">
+            <span class="credentials-title">New password</span>
             {{.Message}}
 
             <div class="form-main-ctn">
                 <div class="form-control">
-                    <input name="username" id="username" class="form-input" type="text" required autofocus />
-                    <label class="form-label" for="username">
-                        <span class="label-text input-letter-1">U</span><span class="label-text input-letter-2">s</span><span class="label-text input-letter-3">e</span><span class="label-text input-letter-4">r</span><span class="label-text input-letter-5">n</span><span class="label-text input-letter-6">a</span><span class="label-text input-letter-7">m</span><span class="label-text input-letter-8">e</span>
-                    </label>
-                </div>
-                <div class="form-control">
-                    <input name="email" id="email" class="form-input" type="text" required />
-                    <label class="form-label" for="email">
-                        <span class="label-text input-letter-1">E</span><span class="label-text input-letter-2">m</span><span class="label-text input-letter-3">a</span><span class="label-text input-letter-4">i</span><span class="label-text input-letter-5">l</span>
-                    </label>
-                </div>
-                <div class="form-control">
-                    <input name="password" id="password" class="form-input" type="password" required />
+                    <input name="password" id="password" class="form-input" type="password" required autofocus />
                     <label class="form-label" for="password">
                         <span class="label-text input-letter-1">P</span><span class="label-text input-letter-2">a</span><span class="label-text input-letter-3">s</span><span class="label-text input-letter-4">s</span><span class="label-text input-letter-5">w</span><span class="label-text input-letter-6">o</span><span class="label-text input-letter-7">r</span><span class="label-text input-letter-8">d</span>
                     </label>
@@ -45,10 +33,7 @@
                 </div>
             </div>
 
-            <button class="form-btn" type="submit">Register</button>
-            <div class="alternate-msg-ctn">
-                <span class="alternate-msg">Already have an account?</span><a href="/login" class="alternate-link">Sign in</a>
-            </div>
+            <button class="form-btn" type="submit">Update</button>
         </form>
         <div class="around-form after-img">
             <div class="img-filler"></div>
