--- a/templates/search.gohtml
+++ b/templates/search.gohtml
@@ -7,48 +7,51 @@
 {{define "page"}}
 
     <form action="/search" method="get" class="searchform">
-        <div class="searchbar">
-            <label for="title">Title</label>
-            <input name="title" id="title" placeholder="Search..." type="text" autofocus />
-            <input type="submit" name="q" id="q" class="search-btn" value="Search">
-        </div>
-        <div class="advanced-search">
+        <div class="search-top">
+            <div class="searchbar">
+                <label for="title">Title</label>
+                <input name="title" id="title" placeholder="Search..." type="text" autofocus />
+                <input type="submit" name="q" id="q" class="search-btn" value="Search">
+            </div>
             <div class="advanced-search-header">
-                <div class="expand-btn"><img src="{{.Path}}/img/arrow.png" alt="arrow-logo" class="arrow-logo" /></div>
+                <div class="expand-btn"><img src="{{.Path}}/img/arrow.png" alt="arrow-logo" id="arrow-logo" /></div>
                 <button type="reset" class="reset-btn">Reset</button>
             </div>
+        </div>
+        <div id="advanced-search" class="shrink">
+            <div class="advanced-search-ctn">
+                <span class="search-tag-title">Status</span>
+                <div class="search-tag-list">
+                    {{range .Tags.StatusTags}}
+                        <div class="search-tag-simple" id="{{.}}"><span class="search-tag-txt">{{.}}</span></div>
+                    {{end}}
+                </div>
+                <span class="search-tag-title">Public</span>
+                <div class="search-tag-list">
+                    {{range .Tags.PublicTags}}
+                        <div class="search-tag-simple" id="{{.}}"><span class="search-tag-txt">{{.}}</span></div>
+                    {{end}}
+                </div>
+                <span class="search-tag-title">Format</span>
+                <div class="search-tag-list">
+                    {{range .Tags.FormatTags}}
+                        <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
+                    {{end}}
+                </div>
+                <span class="search-tag-title">Genre</span>
+                <div class="search-tag-list">
+                    {{range .Tags.GenreTags}}
+                        <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
+                    {{end}}
+                </div>
+                <span class="search-tag-title">Theme</span>
+                <div class="search-tag-list">
+                    {{range .Tags.ThemeTags}}
+                        <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
+                    {{end}}
+                </div>
+            </div>
 
-
-            <span class="search-tag-title">Status</span>
-            <div class="search-tag-list">
-                {{range .Tags.StatusTags}}
-                    <div class="search-tag-simple" id="{{.}}"><span class="search-tag-txt">{{.}}</span></div>
-                {{end}}
-            </div>
-            <span class="search-tag-title">Public</span>
-            <div class="search-tag-list">
-                {{range .Tags.PublicTags}}
-                    <div class="search-tag-simple" id="{{.}}"><span class="search-tag-txt">{{.}}</span></div>
-                {{end}}
-            </div>
-            <span class="search-tag-title">Format</span>
-            <div class="search-tag-list">
-                {{range .Tags.FormatTags}}
-                    <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
-                {{end}}
-            </div>
-            <span class="search-tag-title">Genre</span>
-            <div class="search-tag-list">
-                {{range .Tags.GenreTags}}
-                    <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
-                {{end}}
-            </div>
-            <span class="search-tag-title">Theme</span>
-            <div class="search-tag-list">
-                {{range .Tags.ThemeTags}}
-                    <div class="search-tag" id="{{.Id}}"><span class="search-tag-txt">{{.Attributes.Name.En}}</span></div>
-                {{end}}
-            </div>
 
             <div class="hidden-form">
                 <label for="status">
@@ -91,7 +94,7 @@
         </div>
     </form>
 
-    {{if .Req}}
+    {{if .NextReq}}
         {{if .IsResponse}}
             {{$current := .CurrentPage}}
             <div class="category">
@@ -138,12 +141,12 @@
                 {{if eq $current 1}}
                     <span class="page-link">Previous</span>
                 {{else}}
-                    <a href="?order={{.Order}}&pag={{.Previous}}" class="page-link">Previous</a>
+                    <a href="/search?{{.PrevReq}}" class="page-link">Previous</a>
                 {{end}}
                 {{if eq $current .TotalPages}}
                     <span class="page-link">Next</span>
                 {{else}}
-                    <a href="?order={{.Order}}&pag={{.Next}}" class="page-link">Next</a>
+                    <a href="/search?{{.NextReq}}" class="page-link">Next</a>
                 {{end}}
             </div>
         {{else}}
